--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <p class="game-explanation">
       <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same teacher touch, they <strong>merge into one!</strong>
-      <br><strong class="important">Note:</strong> The order of schools is not intended to be a list of favorites (or else Ohio State would be at the bottom), but a list of schools based on their CFB 2023-24 season performance. It also doesn't include all B10 schools.
+      <br><strong class="important">Note:</strong> The order of schools is not intended to be a list of favorites (or else Ohio State would be at the bottom), but a list of schools (roughly) based on their CFB 2023-24 season performance.
     </p>
     <hr>
     <p>
